# pirates

./: .gitmodules  CMakeLists.txt  README.md  TODO.txt
asset/: dummy.txt
assets/: cannon.mtl
data/: config.json  namer.json
src/: loader.cpp  loader.h  log.cpp  log.h  main.cpp  misc_utils.cpp  misc_utils.h  utils.cpp  utils.h
src/controller/: slicer.cpp  slicer.h  utils.cpp  utils.h
src/manipulator/: manipulator.cpp  manipulator.h  rays.cpp  rays.h
src/model/: attachment.cpp  attachment.h  bind.cpp  bind.h  cannonball.cpp  cannonball.h  compound.cpp  compound.h  floater.cpp  floater.h  highlight.cpp  highlight.h  island.cpp  island.h  obj.cpp  obj.h  perimeters.cpp  perimeters.h  physical_properties.cpp  physical_properties.h  pirate.cpp  pirate.h  pseudo_shadow.cpp  pseudo_shadow.h  sea.cpp  sea.h  ship.cpp  ship.h  solid.cpp  solid.h  structure.cpp  structure.h  target_indicator.cpp  target_indicator.h
src/model/collider/: box.cpp  box.h  circle.cpp  circle.h  collider.cpp  collider.h
src/test/: collision.cpp  collision.h  floater.cpp  floater.h  serialisation.cpp  serialisation.h  solid.cpp  solid.h  suite.cpp  suite.h  utils.cpp  utils.h
src/viewer/: alias.cpp  alias.h  camera.cpp  camera.h  floater.cpp  floater.h  viewer.cpp  viewer.h
